fixed i18n load pathing

--- a/src/locales/en/en.json
+++ b/src/locales/en/en.json
@@ -3,9 +3,10 @@
   "Дебетовый счет": "",
   "Депозитный счет": "",
   "Мои счета": "",
+  "Банкоматы и отделения": "OaOa",
   "Открытые счета": "",
   "Заявки на открытие счета": "",
-  "Закрытые счета": "",
+  "Закрытые счета": "OaOa",
   "Заблокированные счета": "",
   "На данный момент \n у Вас нет соответствующих счетов": "",
   "Больше денег без\u00a0лишних вложений": "",
