feat: перенесла Switcher в features, добавила его в header, добавила стили, иконку для switcher, адаптив под мобильные устройства

--- a/src/locales/en/en.json
+++ b/src/locales/en/en.json
@@ -1,9 +1,9 @@
 {
   "Кредитный счет": "",
+  "Банкоматы и отделения": "Banks & branches",
   "Дебетовый счет": "",
   "Депозитный счет": "",
   "Мои счета": "",
-  "Банкоматы и отделения": "OaOa",
   "Открытые счета": "",
   "Заявки на открытие счета": "",
   "Закрытые счета": "OaOa",
@@ -17,8 +17,24 @@
   "Не удалось открыть счет": "",
   "Мы открыли вам счет!": "",
   "Перейти к списку счетов": "",
-  "Информация по депозиту": "",
+  "Карты": "",
+  "Создать карту": "",
+  "На данный момент \n у Вас нет соответствующих карт": "",
+  "Баланс": "",
+  "Валюта счета": "",
+  "Информация по карте": "",
   "Оформить": "",
+  "Подробнее": "",
+  "Срок действия": "",
+  "Мои карты": "",
+  "Карточные продукты": "",
+  "Bce": "",
+  "Кредитная": "",
+  "Дебетовая": "",
+  "Депозитная": "",
+  "МИР": "",
+  "VISA": "",
+  "Информация по депозиту": "",
   "Пополнить": "",
   "Да": "",
   "Нет": "",
