AGEL-1198 titles added to const naming  conflicts fix

--- a/src/locales/ru/ru.json
+++ b/src/locales/ru/ru.json
@@ -4,6 +4,7 @@
   "Депозитный счет": "",
   "Мои счета": "",
   "Открытые счета": "",
+  "Банкоматы и отделения": "ЙЦУКЕН123",
   "Заявки на открытие счета": "",
   "Закрытые счета": "",
   "Заблокированные счета": "",
