fix: AGEL-1198 исправлены константы и добавлена оболочка для парсинга

--- a/src/shared/model/i18n/locales/en/en.json
+++ b/src/shared/model/i18n/locales/en/en.json
@@ -1,25 +1,27 @@
 {
-  "Банкоматы и отделения": "En Банкоматы и отделения",
+  "Счета": "Accounts",
   "Кредитный счет": "Credit account",
   "Дебетовый счет": "Debit account",
   "Депозитный счет": "Deposit account",
   "Мои счета": "My accounts",
-  "Открытые счета": "Open accounts",
-  "Заявки на открытие счета": "Account opening applications",
+  "Открытые счета": "Opened accounts",
+  "Заявки на открытие счета": "Open account requests",
   "Закрытые счета": "Closed accounts",
   "Заблокированные счета": "Blocked accounts",
-  "На данный момент \n у Вас нет соответствующих счетов": "At the moment \n you do not have any corresponding accounts",
-  "Больше денег без\u00a0лишних вложений": "More money without\u00a0extra investments",
-  "Откройте счет не\u00a0выходя из дома": "Open an account without\u00a0leaving home",
+  "На данный момент \n у Вас нет соответствующих счетов": "You currently have no corresponding accounts",
+  "Открыть счет": "Open account",
+  "Больше денег без лишних вложений": "More money without extra investment",
+  "Откройте счет не выходя из дома": "Open an account without leaving home",
   "Сделайте шаг навстречу мечте": "Take a step towards your dream",
-  "Заберу в офисе банка": "I will pick it up at the bank office",
+  "Заберу в офисе банка": "Pick up at the bank office",
   "Потребуется доставка": "Delivery required",
-  "Не удалось открыть счет": "Failed to open account",
+  "Не удалось открыть счет": "Failed to open an account",
   "Мы открыли вам счет!": "We have opened an account for you!",
-  "Перейти к списку счетов": "Go to the list of accounts",
+  "Перейти к списку счетов": "Go to account list",
   "Карты": "Cards",
   "Создать карту": "Create a card",
-  "На данный момент \n у Вас нет соответствующих карт": "At the moment \n you do not have any corresponding cards",
+  "Виртуальная": "Virtual",
+  "На данный момент \n у Вас нет соответствующих карт": "You currently have no corresponding cards",
   "Номер карты": "Card number",
   "Баланс": "Balance",
   "Валюта счета": "Account currency",
@@ -27,7 +29,7 @@
   "Информация по карте": "Card information",
   "Оформить карту": "Apply for a card",
   "Показать больше": "Show more",
-  "Срок действия": "Expiration date",
+  "Срок действия": "Expiry date",
   "Мои карты": "My cards",
   "Карточные продукты": "Card products",
   "Bce": "All",
@@ -35,44 +37,50 @@
   "Дебетовая": "Debit",
   "Депозитная": "Deposit",
   "МИР": "MIR",
-  "VISA": "VISA",
   "Информация по депозиту": "Deposit information",
   "Оформить": "Apply",
-  "Пополнить": "Top up",
+  "Пополнить": "Top-up",
   "Да": "Yes",
   "Нет": "No",
   "Отозвать": "Withdraw",
-  "Пролонгировать": "Extend",
+  "Пролонгировать": "Prolong",
   "Мои депозиты": "My deposits",
-  "Отключить автопролонгацию": "Disable auto-renewal",
-  "Включить автопролонгацию": "Enable auto-renewal",
-  "Автоматическая пролонгация": "Automatic renewal",
-  "Депозиты A-geld": "A-geld deposits",
+  "Депозиты": "Deposits",
+  "Отключить автопролонгацию": "Disable automatic prolongation",
+  "Включить автопролонгацию": "Enable automatic prolongation",
+  "Автоматическая пролонгация": "Automatic prolongation",
+  "Депозиты A-geld": "Deposits A-geld",
   "Процентная ставка": "Interest rate",
-  "Сумма на депозитном счете": "Deposit account balance",
+  "Сумма на депозитном счете": "Deposit balance",
   "Изначальная сумма депозита": "Initial deposit amount",
   "Схема депозита": "Deposit scheme",
-  "К списку депозитов": "To the list of deposits",
-  "Срочный": "Fixed term",
-  "№ счета с процентами": "Interest-bearing account number",
-  "Отзывной": "Callable",
-  "Процентная ставка при досрочном отзыве депозита": "Interest rate for early withdrawal",
-  "Длительность существования": "Duration",
-  "Окончание срока вклада": "Deposit maturity date",
+  "К списку депозитов": "Go to deposit list",
+  "Срочный": "Urgent",
+  "№ счета с процентами": "Account number with interest",
+  "Отзывной": "Revocable",
+  "Процентная ставка при досрочном отзыве депозита": "Interest rate for early deposit withdrawal",
+  "Длительность существования": "Term of existence",
+  "Окончание срока вклада": "Deposit end of term",
   "Выполнить депозит": "Make a deposit",
-  "На данный момент \n у Вас нет депозитов": "At the moment \n you do not have any deposits",
-  "Liberty бессрочный": "Liberty perpetual",
-  "Банкомат": "ATM",
-  "Инфокиоск": "Info kiosk",
-  "Главный офис": "Head office",
-  "Отделение банка": "Bank branch",
-  "Обменный пункт": "Exchange office",
+  "На данный момент \n у Вас нет депозитов": "You currently have no deposits",
+  "Главная": "Главная",
+  "Курсы валют": "Exchange rates",
+  "Контакты": "Contacts",
+  "Список услуг": "Service list",
+  "Документы": "Documents",
+  "Вопросы и ответы": "Q&A",
+  "Банки и отделения": "Banks and branches",
+  "Кредиты": "Loans",
+  "Переводы": "Transfers",
+  "Платежи": "Payments",
   "Все": "All",
   "Активный": "Active",
   "Закрытый": "Closed",
   "Заблокированный": "Blocked",
   "Основной": "Main",
-  "Капитализация": "Capitalization",
-  "Автопролонгация": "Auto-renewal",
-  "Автопролонгация отключена": "Auto-renewal disabled"
+  "Автопролонгация": "Autoprolongation",
+  "Автопролонгация отключена": "Autoprolongation disabled",
+  "У вас уже есть аккаунт?": "Do you already have an account?",
+  "Зарегистрируйтесь": "Sign up",
+  "Авторизуйтесь": "Sign in"
 }
