--- a/src/shared/model/i18n/locales/ru/ru.json
+++ b/src/shared/model/i18n/locales/ru/ru.json
@@ -1,5 +1,5 @@
 {
-  "Банкоматы и отделения": "Банкоматы и отделения",
+  "Счета": "Счета",
   "Кредитный счет": "Кредитный счет",
   "Дебетовый счет": "Дебетовый счет",
   "Депозитный счет": "Депозитный счет",
@@ -9,8 +9,9 @@
   "Закрытые счета": "Закрытые счета",
   "Заблокированные счета": "Заблокированные счета",
   "На данный момент \n у Вас нет соответствующих счетов": "На данный момент \n у Вас нет соответствующих счетов",
-  "Больше денег без\u00a0лишних вложений": "Больше денег без\u00a0лишних вложений",
-  "Откройте счет не\u00a0выходя из дома": "Откройте счет не\u00a0выходя из дома",
+  "Открыть счет": "Открыть счет",
+  "Больше денег без лишних вложений": "Больше денег без лишних вложений",
+  "Откройте счет не выходя из дома": "Откройте счет не выходя из дома",
   "Сделайте шаг навстречу мечте": "Сделайте шаг навстречу мечте",
   "Заберу в офисе банка": "Заберу в офисе банка",
   "Потребуется доставка": "Потребуется доставка",
@@ -19,6 +20,7 @@
   "Перейти к списку счетов": "Перейти к списку счетов",
   "Карты": "Карты",
   "Создать карту": "Создать карту",
+  "Виртуальная": "Виртуальная",
   "На данный момент \n у Вас нет соответствующих карт": "На данный момент \n у Вас нет соответствующих карт",
   "Номер карты": "Номер карты",
   "Баланс": "Баланс",
@@ -35,7 +37,6 @@
   "Дебетовая": "Дебетовая",
   "Депозитная": "Депозитная",
   "МИР": "МИР",
-  "VISA": "VISA",
   "Информация по депозиту": "Информация по депозиту",
   "Оформить": "Оформить",
   "Пополнить": "Пополнить",
@@ -44,6 +45,7 @@
   "Отозвать": "Отозвать",
   "Пролонгировать": "Пролонгировать",
   "Мои депозиты": "Мои депозиты",
+  "Депозиты": "Депозиты",
   "Отключить автопролонгацию": "Отключить автопролонгацию",
   "Включить автопролонгацию": "Включить автопролонгацию",
   "Автоматическая пролонгация": "Автоматическая пролонгация",
@@ -61,18 +63,24 @@
   "Окончание срока вклада": "Окончание срока вклада",
   "Выполнить депозит": "Выполнить депозит",
   "На данный момент \n у Вас нет депозитов": "На данный момент \n у Вас нет депозитов",
-  "Liberty бессрочный": "Liberty бессрочный",
-  "Банкомат": "Банкомат",
-  "Инфокиоск": "Инфокиоск",
-  "Главный офис": "Главный офис",
-  "Отделение банка": "Отделение банка",
-  "Обменный пункт": "Обменный пункт",
+  "Главная": "Главная",
+  "Курсы валют": "Курсы валют",
+  "Контакты": "Контакты",
+  "Список услуг": "Список услуг",
+  "Документы": "Документы",
+  "Вопросы и ответы": "Вопросы и ответы",
+  "Банки и отделения": "Банки и отделения",
+  "Кредиты": "Кредиты",
+  "Переводы": "Переводы",
+  "Платежи": "Платежи",
   "Все": "Все",
   "Активный": "Активный",
   "Закрытый": "Закрытый",
   "Заблокированный": "Заблокированный",
   "Основной": "Основной",
-  "Капитализация": "Капитализация",
   "Автопролонгация": "Автопролонгация",
-  "Автопролонгация отключена": "Автопролонгация отключена"
+  "Автопролонгация отключена": "Автопролонгация отключена",
+  "У вас уже есть аккаунт?": "У вас уже есть аккаунт?",
+  "Зарегистрируйтесь": "Зарегистрируйтесь",
+  "Авторизуйтесь": "Авторизуйтесь"
 }
