fix: AGEL-1198 добавлен перевод для "Главная"

--- a/src/shared/model/i18n/locales/en/en.json
+++ b/src/shared/model/i18n/locales/en/en.json
@@ -63,7 +63,7 @@
   "Окончание срока вклада": "Deposit end of term",
   "Выполнить депозит": "Make a deposit",
   "На данный момент \n у Вас нет депозитов": "You currently have no deposits",
-  "Главная": "Главная",
+  "Главная": "Main",
   "Курсы валют": "Exchange rates",
   "Контакты": "Contacts",
   "Список услуг": "Service list",
