feat: AGEL-1226 добавлена DepositExtensionPage, Terms, extendedDeposit

--- a/src/shared/model/i18n/locales/en/en.json
+++ b/src/shared/model/i18n/locales/en/en.json
@@ -1,4 +1,10 @@
 {
+  "Условия пролонгации депозита": "Условия пролонгации депозита",
+  "Ваш депозит успешно пролонгирован": "Ваш депозит успешно пролонгирован",
+  "Вернуться к странице депозита": "Вернуться к странице депозита",
+  "Срок пролонгации": "Срок пролонгации",
+  "мес": "мес.",
+  "Пролонгировать депозит": "Пролонгировать депозит",
   "Счета": "Accounts",
   "Кредитный счет": "Credit account",
   "Дебетовый счет": "Debit account",
@@ -80,7 +86,9 @@
   "Основной": "Main",
   "Автопролонгация": "Autoprolongation",
   "Автопролонгация отключена": "Autoprolongation disabled",
+  "Реквизиты": "Реквизиты",
   "У вас уже есть аккаунт?": "Do you already have an account?",
   "Зарегистрируйтесь": "Sign up",
-  "Авторизуйтесь": "Sign in"
+  "Авторизуйтесь": "Sign in",
+  "Банкоматы и отделения": "Банкоматы и отделения"
 }
