--- a/src/shared/model/i18n/locales/ru/ru.json
+++ b/src/shared/model/i18n/locales/ru/ru.json
@@ -1,4 +1,10 @@
 {
+  "Условия пролонгации депозита": "Условия пролонгации депозита",
+  "Ваш депозит успешно пролонгирован": "Ваш депозит успешно пролонгирован",
+  "Вернуться к странице депозита": "Вернуться к странице депозита",
+  "Срок пролонгации": "Срок пролонгации",
+  "мес": "мес.",
+  "Пролонгировать депозит": "Пролонгировать депозит",
   "Счета": "Счета",
   "Кредитный счет": "Кредитный счет",
   "Дебетовый счет": "Дебетовый счет",
@@ -80,7 +86,9 @@
   "Основной": "Основной",
   "Автопролонгация": "Автопролонгация",
   "Автопролонгация отключена": "Автопролонгация отключена",
+  "Реквизиты": "Реквизиты",
   "У вас уже есть аккаунт?": "У вас уже есть аккаунт?",
   "Зарегистрируйтесь": "Зарегистрируйтесь",
-  "Авторизуйтесь": "Авторизуйтесь"
+  "Авторизуйтесь": "Авторизуйтесь",
+  "Банкоматы и отделения": "Банкоматы и отделения"
 }
