feat: AGEL-1222 Добавлена локализация личного кабинета

--- a/src/shared/model/i18n/locales/en/en.json
+++ b/src/shared/model/i18n/locales/en/en.json
@@ -1,4 +1,40 @@
 {
+  "Адрес": "Address",
+  "Адрес куда банк будет направлять почтовую корреспонденцию": "Address where the bank will send postal correspondence",
+  "Улица": "Street",
+  "Дом": "House",
+  "Квартира": "Apartment",
+  "Город": "City",
+  "Индекс": "Postal code",
+  "Для изменения адреса регистрации необходимо обратиться в ближайшее отделение банка": "To change the registration address, you need to visit the nearest bank branch",
+  "Контактные данные": "Contact information",
+  "Телефон нужен для того, чтобы подтверждать операции и настройки счета": "A phone is needed to confirm transactions and account settings",
+  "Телефон": "Phone",
+  "Чтобы привязать новый телефон позвоните по номеру 8 800 666-99-98": {
+    " Звонок бесплатный": "To link a new phone, call 8 800 666-99-98. The call is free"
+  },
+  "На почту приходят счета и справки": "Bills and statements are sent to your mail",
+  "Отменить": "Cancel",
+  "Сохранить": "Save",
+  "Изменить": "Change",
+  "Добавить": "Add",
+  "Текущий пароль": "Current password",
+  "Новый пароль": "New password",
+  "Подтвердите новый пароль": "Confirm new password",
+  "Продолжить": "Continue",
+  "Личные данные": "Personal information",
+  "Безопасность": "Security",
+  "Изменить пароль": "Change password",
+  "Уведомления": "Notifications",
+  "Способ получения уведомлений": "Notification method",
+  "Email-оповещения": "Email notifications",
+  "SMS-оповещения": "SMS notifications",
+  "Push-оповещения": "Push notifications",
+  "Категория уведомлений": "Notification category",
+  "Денежные операции (отправить/оплатить/получить)": "Financial transactions (send/pay/receive)",
+  "Важные обновления": "Important updates",
+  "Новости/акции": "News/promotions",
+  "История уведомлений": "Notification history",
   "Счета": "Accounts",
   "Кредитный счет": "Credit account",
   "Дебетовый счет": "Debit account",
@@ -82,5 +118,6 @@
   "Автопролонгация отключена": "Autoprolongation disabled",
   "У вас уже есть аккаунт?": "Do you already have an account?",
   "Зарегистрируйтесь": "Sign up",
-  "Авторизуйтесь": "Sign in"
+  "Авторизуйтесь": "Sign in",
+  "Банкоматы и отделения": "Banks and branches"
 }
