--- a/src/shared/model/i18n/locales/ru/ru.json
+++ b/src/shared/model/i18n/locales/ru/ru.json
@@ -1,4 +1,40 @@
 {
+  "Адрес": "Адрес",
+  "Адрес куда банк будет направлять почтовую корреспонденцию": "Адрес куда банк будет направлять почтовую корреспонденцию",
+  "Улица": "Улица",
+  "Дом": "Дом",
+  "Квартира": "Квартира",
+  "Город": "Город",
+  "Индекс": "Индекс",
+  "Для изменения адреса регистрации необходимо обратиться в ближайшее отделение банка": "Для изменения адреса регистрации необходимо обратиться в ближайшее отделение банка",
+  "Контактные данные": "Контактные данные",
+  "Телефон нужен для того, чтобы подтверждать операции и настройки счета": "Телефон нужен для того, чтобы подтверждать операции и настройки счета",
+  "Телефон": "Телефон",
+  "Чтобы привязать новый телефон позвоните по номеру 8 800 666-99-98": {
+    " Звонок бесплатный": "Чтобы привязать новый телефон позвоните по номеру 8 800 666-99-98. Звонок бесплатный"
+  },
+  "На почту приходят счета и справки": "На почту приходят счета и справки",
+  "Отменить": "Отменить",
+  "Сохранить": "Сохранить",
+  "Изменить": "Изменить",
+  "Добавить": "Добавить",
+  "Текущий пароль": "Текущий пароль",
+  "Новый пароль": "Новый пароль",
+  "Подтвердите новый пароль": "Подтвердите новый пароль",
+  "Продолжить": "Продолжить",
+  "Личные данные": "Личные данные",
+  "Безопасность": "Безопасность",
+  "Изменить пароль": "Изменить пароль",
+  "Уведомления": "Уведомления",
+  "Способ получения уведомлений": "Способ получения уведомлений",
+  "Email-оповещения": "Email-оповещения",
+  "SMS-оповещения": "SMS-оповещения",
+  "Push-оповещения": "Push-оповещения",
+  "Категория уведомлений": "Категория уведомлений",
+  "Денежные операции (отправить/оплатить/получить)": "Денежные операции (отправить/оплатить/получить)",
+  "Важные обновления": "Важные обновления",
+  "Новости/акции": "Новости/акции",
+  "История уведомлений": "История уведомлений",
   "Счета": "Счета",
   "Кредитный счет": "Кредитный счет",
   "Дебетовый счет": "Дебетовый счет",
@@ -82,5 +118,6 @@
   "Автопролонгация отключена": "Автопролонгация отключена",
   "У вас уже есть аккаунт?": "У вас уже есть аккаунт?",
   "Зарегистрируйтесь": "Зарегистрируйтесь",
-  "Авторизуйтесь": "Авторизуйтесь"
+  "Авторизуйтесь": "Авторизуйтесь",
+  "Банкоматы и отделения": "Банкоматы и отделения"
 }
