feat: AGEL-1196 добавлен хук useTranslation и вызов метода t библиотеки i18next в компонентах авторизации и регистрации, добавлены слова в en.json и ru.json

--- a/src/shared/model/i18n/locales/en/en.json
+++ b/src/shared/model/i18n/locales/en/en.json
@@ -1,4 +1,25 @@
 {
+  "Отправить смс еще раз": "send sms",
+  "На Ваш номер телефона отправлен 6-значный код подтверждения": "you phone will recieve",
+  "Далее": "next",
+  "Продолжить": "continue",
+  "Номер телефона": "Telefon",
+  "Номер телефона должен содержать 11 цифр": "number should contain 11",
+  "Нажав кнопку «Далее», вы соглашаетесь с ": "you agree",
+  "Правилами дистанционного банковского обслуживания": "rules",
+  "и": "and",
+  "Политикой конфиденциальности": "Policy conf",
+  "и даёте согласие на сбор и обработку информации": "and agree ",
+  "Отклонить": "reject",
+  "Пароль": "Password",
+  "Восстановление пароля": "recover password",
+  "Выйти": "logout",
+  "Назад": "back",
+  "Войдите в личный кабинет": "Log in",
+  "Введите код из смс": "enter cod",
+  "Введите пароль": "enter password",
+  "Регистрация": "regist",
+  "Придумайте пароль": "think password",
   "Счета": "Accounts",
   "Кредитный счет": "Credit account",
   "Дебетовый счет": "Debit account",
@@ -82,5 +103,8 @@
   "Автопролонгация отключена": "Autoprolongation disabled",
   "У вас уже есть аккаунт?": "Do you already have an account?",
   "Зарегистрируйтесь": "Sign up",
-  "Авторизуйтесь": "Sign in"
+  "Авторизуйтесь": "Sign in",
+  "Банкоматы и отделения": "Banks",
+  "Личные данные": "Personal data",
+  "Войти": "login"
 }
