--- a/src/shared/model/i18n/locales/ru/ru.json
+++ b/src/shared/model/i18n/locales/ru/ru.json
@@ -1,4 +1,25 @@
 {
+  "Отправить смс еще раз": "Отправить смс еще раз",
+  "На Ваш номер телефона отправлен 6-значный код подтверждения": "На Ваш номер телефона отправлен 6-значный код подтверждения",
+  "Далее": "Далее",
+  "Продолжить": "Продолжить",
+  "Номер телефона": "Номер телефона",
+  "Номер телефона должен содержать 11 цифр": "Номер телефона должен содержать 11 цифр",
+  "Нажав кнопку «Далее», вы соглашаетесь с ": "Нажав кнопку «Далее», вы соглашаетесь с ",
+  "Правилами дистанционного банковского обслуживания": "Правилами дистанционного банковского обслуживания",
+  "и": "и",
+  "Политикой конфиденциальности": "Политикой конфиденциальности",
+  "и даёте согласие на сбор и обработку информации": "и даёте согласие на сбор и обработку информации",
+  "Отклонить": "Отклонить",
+  "Пароль": "Пароль",
+  "Восстановление пароля": "Восстановление пароля",
+  "Выйти": "Выйти",
+  "Назад": "Назад",
+  "Войдите в личный кабинет": "Войдите в личный кабинет",
+  "Введите код из смс": "Введите код из смс",
+  "Введите пароль": "Введите пароль",
+  "Регистрация": "Регистрация",
+  "Придумайте пароль": "Придумайте пароль",
   "Счета": "Счета",
   "Кредитный счет": "Кредитный счет",
   "Дебетовый счет": "Дебетовый счет",
@@ -82,5 +103,8 @@
   "Автопролонгация отключена": "Автопролонгация отключена",
   "У вас уже есть аккаунт?": "У вас уже есть аккаунт?",
   "Зарегистрируйтесь": "Зарегистрируйтесь",
-  "Авторизуйтесь": "Авторизуйтесь"
+  "Авторизуйтесь": "Авторизуйтесь",
+  "Банкоматы и отделения": "Банкоматы и отделения",
+  "Личные данные": "Личные данные",
+  "Войти": "Войти"
 }
