feat: AGEL-1196 добавлен хук useTranslation и вызов метода t библиотеки i18next в компонентах авторизации, регистрации и восстановления пароля, добавлены слова и перевод в en.json и ru.json

--- a/src/shared/model/i18n/locales/ru/ru.json
+++ b/src/shared/model/i18n/locales/ru/ru.json
@@ -1,7 +1,11 @@
 {
+  "Повторная отправка через": "Повторная отправка через",
   "Отправить смс еще раз": "Отправить смс еще раз",
   "На Ваш номер телефона отправлен 6-значный код подтверждения": "На Ваш номер телефона отправлен 6-значный код подтверждения",
   "Далее": "Далее",
+  "Подтвердите новый пароль": "Подтвердите новый пароль",
+  "Подтвердите пароль": "Подтвердите пароль",
+  "Отправить": "Отправить",
   "Продолжить": "Продолжить",
   "Номер телефона": "Номер телефона",
   "Номер телефона должен содержать 11 цифр": "Номер телефона должен содержать 11 цифр",
@@ -18,6 +22,7 @@
   "Войдите в личный кабинет": "Войдите в личный кабинет",
   "Введите код из смс": "Введите код из смс",
   "Введите пароль": "Введите пароль",
+  "Придумайте новый пароль": "Придумайте новый пароль",
   "Регистрация": "Регистрация",
   "Придумайте пароль": "Придумайте пароль",
   "Счета": "Счета",
