--- a/src/shared/model/i18n/locales/ru/ru_old.json
+++ b/src/shared/model/i18n/locales/ru/ru_old.json
@@ -1,1 +1,11 @@
-{}
+{
+  "Клиент не найден!": "Клиент не найден!",
+  "Повторная отправка через {{seconds}}": "Повторная отправка через {{seconds}}",
+  " / ": {
+    " ; < = > ? @ [  ] ^ _` { | } ~": " / . ; < = > ? @ [  ] ^ _` { | } ~"
+  },
+  "Количество символов от 6 до 20": "Количество символов от 6 до 20",
+  "Есть строчные и заглавные буквы": "Есть строчные и заглавные буквы",
+  "Используйте только буквы (a-z, A-Z), цифры и символы {{symbols}}": "Используйте только буквы (a-z, A-Z), цифры и символы {{symbols}}",
+  "Есть специальные символы": "Есть специальные символы"
+}
