--- a/src/shared/model/i18n/locales/en/en.json
+++ b/src/shared/model/i18n/locales/en/en.json
@@ -1,25 +1,30 @@
 {
-  "Отправить смс еще раз": "send sms",
-  "На Ваш номер телефона отправлен 6-значный код подтверждения": "you phone will recieve",
-  "Далее": "next",
-  "Продолжить": "continue",
-  "Номер телефона": "Telefon",
-  "Номер телефона должен содержать 11 цифр": "number should contain 11",
-  "Нажав кнопку «Далее», вы соглашаетесь с ": "you agree",
-  "Правилами дистанционного банковского обслуживания": "rules",
+  "Повторная отправка через": "Resend in",
+  "Отправить смс еще раз": "Resend SMS",
+  "На Ваш номер телефона отправлен 6-значный код подтверждения": "A 6-digit confirmation code has been sent to your phone number",
+  "Далее": "Next",
+  "Подтвердите новый пароль": "Confirm new password",
+  "Подтвердите пароль": "Confirm password",
+  "Отправить": "Send",
+  "Продолжить": "Continue",
+  "Номер телефона": "Phone number",
+  "Номер телефона должен содержать 11 цифр": "Phone number must contain 11 digits",
+  "Нажав кнопку «Далее», вы соглашаетесь с ": "By clicking the “Next” button, you agree to ",
+  "Правилами дистанционного банковского обслуживания": "the Remote Banking Service Rules",
   "и": "and",
-  "Политикой конфиденциальности": "Policy conf",
-  "и даёте согласие на сбор и обработку информации": "and agree ",
-  "Отклонить": "reject",
+  "Политикой конфиденциальности": "Privacy Policy",
+  "и даёте согласие на сбор и обработку информации": "and consent to the collection and processing of information",
+  "Отклонить": "Decline",
   "Пароль": "Password",
-  "Восстановление пароля": "recover password",
-  "Выйти": "logout",
-  "Назад": "back",
-  "Войдите в личный кабинет": "Log in",
-  "Введите код из смс": "enter cod",
-  "Введите пароль": "enter password",
-  "Регистрация": "regist",
-  "Придумайте пароль": "think password",
+  "Восстановление пароля": "Password recovery",
+  "Выйти": "Log out",
+  "Назад": "Back",
+  "Войдите в личный кабинет": "Log in to your personal account",
+  "Введите код из смс": "Enter the code from SMS",
+  "Введите пароль": "Enter password",
+  "Придумайте новый пароль": "Come up with a new password",
+  "Регистрация": "Registration",
+  "Придумайте пароль": "Create a password",
   "Счета": "Accounts",
   "Кредитный счет": "Credit account",
   "Дебетовый счет": "Debit account",
@@ -104,7 +109,7 @@
   "У вас уже есть аккаунт?": "Do you already have an account?",
   "Зарегистрируйтесь": "Sign up",
   "Авторизуйтесь": "Sign in",
-  "Банкоматы и отделения": "Banks",
+  "Банкоматы и отделения": "ATMs and branches",
   "Личные данные": "Personal data",
-  "Войти": "login"
+  "Войти": "Log in"
 }
